# electronic-parsers

./: .gitignore  .gitmodules  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-actions.yaml
electronicparsers/: __init__.py
electronicparsers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
electronicparsers/abacus/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/abinit/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/alf/: README.md  __init__.py  __main__.py  metadata.yaml  parser.py
electronicparsers/ams/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py  rkf.py
electronicparsers/atk/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/band/: README.md  __init__.py  __main__.py  metadata.yaml  parser.py
electronicparsers/bigdft/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/castep/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/charmm/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/cmb2/: README.md  __init__.py  __main__.py  metadata.yaml  parser.py
electronicparsers/cp2k/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/cpmd/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/crystal/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/dmol3/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/edmft/: __init__.py  __main__.py  nomad_plugin.yaml  parser.py
electronicparsers/elk/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/exciting/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/fhiaims/: README.md  __init__.py  __main__.py  convert_tiers.ipynb  metadata.yaml  native_tier_references.json  nomad_plugin.yaml  parser.py
electronicparsers/fleur/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/fplo/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/gamess/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/gaussian/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/gpaw/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/magres/: __init__.py  __main__.py  nomad_plugin.yaml  parser.py
electronicparsers/molcas/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/mopac/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/nwchem/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/ocean/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/octopus/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/onetep/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/openmx/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/orca/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/psi4/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/qball/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/qbox/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/quantumespresso/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/siesta/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
electronicparsers/soliddmft/: README.md  __init__.py  __main__.py  metadata.yaml  (+2 more)
tests/: conftest.py  dos_integrator.py  test_abacusparser.py  test_abinitparser.py  test_alfparser.py  test_amsparser.py  test_atkparser.py  test_bandparser.py  test_bigdftparser.py  test_castepparser.py  test_charmmparser.py  test_cp2kparser.py  test_cpmdparser.py  test_crystalparser.py  test_dmol3parser.py  test_edmftparser.py  test_elkparser.py  test_excitingparser.py  test_fhiaimsparser.py  test_fleurparser.py  test_fploparser.py  test_gamessparser.py  test_gaussianparser.py  test_gpawparser.py  test_magresparser.py  test_molcasparser.py  test_mopacparser.py  test_nwchemparser.py  test_oceanparser.py  test_octopusparser.py  test_onetepparser.py  test_openmxparser.py  test_orcaparser.py  test_psi4parser.py  test_qballparser.py  test_qboxparser.py  test_quantumespressoparser.py  test_siestaparser.py  test_soliddmft.py  test_soliddmftparser.py  (+7 more)
(+1100 files in other folders)
