[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'electronicparsers'
version = '1.0'
description = 'Collection of NOMAD parsers for electronic structure codes.'
readme = "README.md"
authors = [{ name = "The NOMAD Authors" }]
license = { file = "LICENSE" }
dependencies = [
    # "nomad-lab",
    "lxml==4.7.1",
    "pyscf==2.0.1; sys_platform == 'darwin'",
    "netCDF4==1.5.4",
    "h5py>=3.6.0",
]

[project.urls]
homepage = "https://github.com/nomad-coe/electronic-parsers"

[project.optional-dependencies]
tests = [
    'mypy==1.0.1',
    'pylint==2.13.9',
    'pylint_plugin_utils==0.7',
    'pycodestyle==2.8.0',
    'pytest==3.10.0',
    'pytest-timeout==1.4.2',
    'pytest-cov==2.7.1',
    'astroid>=2.5.1'
]

[tool.setuptools.packages.find]
include = ["electronicparsers*"]

[tool.setuptools.package-data]
electronicparsers = ['*/metadata.yaml', '*/README.md']
