[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'electronicparsers'
version = '1.1'
description = 'Collection of NOMAD parsers for electronic structure codes.'
readme = "README.md"
authors = [{ name = "The NOMAD Authors" }]
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab[parsing,infrastructure]@git+https://github.com/nomad-coe/nomad.git#egg=develop",
    "lxml==4.7.1",
    "pyscf==2.0.1; sys_platform == 'darwin'",
    "netCDF4==1.5.4",
    "h5py>=3.6.0",
    "pyyaml==6.0",
]

[project.urls]
homepage = "https://github.com/nomad-coe/electronic-parsers"

[project.optional-dependencies]
dev = [
    'mypy==1.0.1',
    'pytest==3.10.0',
    'pytest-timeout==1.4.2',
    'pytest-cov==2.7.1',
    'astroid==2.11.7',
    'typing-extensions==4.4.0',
    'ruff==0.1.4'
]

[tool.ruff]
include = ["electronicparsers/*.py", "tests/*.py"]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
]
ignore = [
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402",  # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]

[tool.setuptools.packages.find]
include = ["electronicparsers*"]

[tool.setuptools.package-data]
electronicparsers = ['*/metadata.yaml', '*/README.md']
